; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/rt2x00/extr_rt2x00crypto.c_rt2x00crypto_key_to_cipher.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/rt2x00/extr_rt2x00crypto.c_rt2x00crypto_key_to_cipher.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ieee80211_key_conf = type { i32 }

@CIPHER_WEP64 = common dso_local global i32 0, align 4
@CIPHER_WEP128 = common dso_local global i32 0, align 4
@CIPHER_TKIP = common dso_local global i32 0, align 4
@CIPHER_AES = common dso_local global i32 0, align 4
@CIPHER_NONE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rt2x00crypto_key_to_cipher(%struct.ieee80211_key_conf* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.ieee80211_key_conf*, align 8
  store %struct.ieee80211_key_conf* %0, %struct.ieee80211_key_conf** %3, align 8
  %4 = load %struct.ieee80211_key_conf*, %struct.ieee80211_key_conf** %3, align 8
  %5 = getelementptr inbounds %struct.ieee80211_key_conf, %struct.ieee80211_key_conf* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  switch i32 %6, label %15 [
    i32 128, label %7
    i32 129, label %9
    i32 130, label %11
    i32 131, label %13
  ]

7:                                                ; preds = %1
  %8 = load i32, i32* @CIPHER_WEP64, align 4
  store i32 %8, i32* %2, align 4
  br label %17

9:                                                ; preds = %1
  %10 = load i32, i32* @CIPHER_WEP128, align 4
  store i32 %10, i32* %2, align 4
  br label %17

11:                                               ; preds = %1
  %12 = load i32, i32* @CIPHER_TKIP, align 4
  store i32 %12, i32* %2, align 4
  br label %17

13:                                               ; preds = %1
  %14 = load i32, i32* @CIPHER_AES, align 4
  store i32 %14, i32* %2, align 4
  br label %17

15:                                               ; preds = %1
  %16 = load i32, i32* @CIPHER_NONE, align 4
  store i32 %16, i32* %2, align 4
  br label %17

17:                                               ; preds = %15, %13, %11, %9, %7
  %18 = load i32, i32* %2, align 4
  ret i32 %18
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
